--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                         </h2>
 
                         <p class="h1">
-                            I love to hear from you.
+                            I would love to hear from you.
                             Whether you have a question or just 
                             want to chat about design, art or bikes — shoot me a message.
                         </p>
