--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <p class="h1">
                             I would love to hear from you.
                             Whether you have a question or just 
-                            want to chat about designo or art — shoot me a message.
+                            want to chat about design or art — shoot me a message.
                         </p>
                     </div>
                 </div> <!-- end contact-top -->
