--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             <div class="row">
                 <div class="column ss-copyright">
                     <span>© Copyright Manish 2025</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">Manish Raja</a></span>
+                    <span>Design by <a href="#">Manish Raja</a></span>
                 </div>
 
                 <div class="ss-go-top">
@@ -385,4 +385,5 @@
 
 </body>
 </html>
+
 
