--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             <div class="row">
                 <div class="column ss-copyright">
                     <span>© Copyright Manish 2025</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">Manish Raja</a></span>
+                    <span>Design by <a href="#">Manish Raja</a></span>
                 </div>
 
                 <div class="ss-go-top">
@@ -507,5 +507,6 @@
 </body>
 
 </html>
+
 
 
