--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                     <ul class="intro-social">
                         <li><a href="https://www.behance.net/mannmehta" target="_blank">Behance</a></li>
-                        <li><a href="https://www.instagram.com/lone.gearhead/" target="_blank">Instagram</a></li>
+                        <li><a href="https://linkedin.com/in/manish-raja-685260176" target="_blank">LinkedIn</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -464,7 +464,7 @@
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
                             <li><a href="https://www.behance.net/mannmehta" target="_blank">Behance</a></li>
-                            <li><a href="https://www.instagram.com/lone.gearhead/" target="_blank">Instagram</a></li>
+                            <li><a href="https://linkedin.com/in/manish-raja-685260176" target="_blank">LinkedIn</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
@@ -507,6 +507,7 @@
 </body>
 
 </html>
+
 
 
 
