--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Creative and results-driven Experience Designer with 6+ years of experience crafting user-centered digital products. I turn complex problems into intuitive, elegant solutions through a balance of strategy, creativity and design thinking. <br><br>
-
-                                Skilled in leading end-to-end design processes. I align business goals with user needs to deliver scalable, impactful experiences. From UX research to polished interfaces, I focus on creating products that work beautifully and effectively.
+                                Senior UX Designer with over 6 years of experience crafting enterprise and consumer-facing digital products across fintech, SaaS, e-commerce and healthcare. I specialize in user-centered design, prototyping, interaction design and scalable design systems, with proven expertise in cross-functional collaboration and driving business impact through usability-focused solutions.
+                                <br><br>
+                                Skilled in Figma, Adobe XD and Creative Cloud, with hands-on experience of designing in AI-driven environments.
                             </p>
                             <a href="https://drive.google.com/file/d/16FY3kJ2r28zFzaO4s5-6ZL2tlPhCSbqJ/view?usp=sharing" class="btn btn--medium u-fullwidth" data-animate-el target="_blank">Download CV</a>
 
@@ -507,6 +507,7 @@
 </body>
 
 </html>
+
 
 
 
