--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                                 <br><br>
                                 Skilled in Figma, Adobe XD and Creative Cloud, with hands-on experience of designing in AI-driven environments.
                             </p>
-                            <a href="https://drive.google.com/file/d/16FY3kJ2r28zFzaO4s5-6ZL2tlPhCSbqJ/view?usp=sharing" class="btn btn--medium u-fullwidth" data-animate-el target="_blank">Download CV</a>
+                           <!-- <a href="https://drive.google.com/file/d/16FY3kJ2r28zFzaO4s5-6ZL2tlPhCSbqJ/view?usp=sharing" class="btn btn--medium u-fullwidth" data-animate-el target="_blank">Download CV</a>
+                            -->
 
                         </div>
                     </div>
@@ -507,6 +508,7 @@
 </body>
 
 </html>
+
 
 
 
