--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Senior UX Designer with over 6 years of experience crafting enterprise and consumer-facing digital products across fintech, SaaS, e-commerce and healthcare. I specialize in user-centered design, prototyping, interaction design and scalable design systems, with proven expertise in cross-functional collaboration and driving business impact through usability-focused solutions.
+                                Senior UI/UX Designer with 6+ years of experience of leading end-to-end design process for B2B, enterprise and SaaS products, including healthcare, e-commerce and fintech platforms. I’m strong at translating complex requirements into simple, intuitive experiences through research-driven UX, scalable design systems and high-quality UI design. 
                                 <br><br>
-                                Skilled in Figma, Adobe XD and Creative Cloud, with hands-on experience of designing in AI-driven environments.
+                                Proven design leader with hands-on ownership of strategy, execution and mentoring, while collaborating with engineering, client and stakeholders. Skilled in leveraging AI-driven tools and accessibility standards to deliver consistent, inclusive and business-aligned outcomes.
                             </p>
                            <!-- <a href="https://drive.google.com/file/d/16FY3kJ2r28zFzaO4s5-6ZL2tlPhCSbqJ/view?usp=sharing" class="btn btn--medium u-fullwidth" data-animate-el target="_blank">Download CV</a>
                             -->
@@ -508,6 +508,7 @@
 </body>
 
 </html>
+
 
 
 
