meta Tags Updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Manish Raja | Experience Desginer in India</title>
-    <meta name="description" content="Senior UX/Product Designer">
+    <meta name="description" content="Senior UX-Product Designer">
     <meta name="author" content="Manish Raja">
 
     <!-- mobile specific metas
