--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Senior UI/UX Designer with 6+ years of experience of leading end-to-end design process for B2B, enterprise and SaaS products, including healthcare, e-commerce and fintech platforms. I’m strong at translating complex requirements into simple, intuitive experiences through research-driven UX, scalable design systems and high-quality UI design. 
+                                Senior Product / UX Designer with 7 years of experience of leading end-to-end design process for B2B, enterprise and SaaS products, including healthcare, fintech and e-commerce platforms. I’m strong at translating complex requirements into simple, intuitive experiences through research-driven UX, scalable design systems and high-quality UI design. 
                                 <br><br>
                                 Proven design leader with hands-on ownership of strategy, execution and mentoring, while collaborating with engineering, client and stakeholders. Skilled in leveraging AI-driven tools and accessibility standards to deliver consistent, inclusive and business-aligned outcomes.
                             </p>
@@ -512,6 +512,7 @@
 </body>
 
 </html>
+
 
 
 
